<resources xmlns:tools="http://schemas.android.com/tools">

    //testing Ads ID
<!--        <string name="drink_AdsAPPID">ca-app-pub-3940256099942544~3347511713</string>-->
<!--        <string name="drink_banner">ca-app-pub-3940256099942544/6300978111</string>-->
<!--        <string name="drink_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->
    //Release Ads ID
    <string name="drink_AdsAPPID">ca-app-pub-7139778855873237~2206970446</string>
    <string name="drink_banner">ca-app-pub-7139778855873237/9952764370</string>
    <string name="drink_interstitial">ca-app-pub-7139778855873237/4115658920</string>

    <string name="app_name">Smart Drink Reminder</string>
    <string name="sdp">SmartDrinkReminder</string>
    <string name="stay_healthy">STAY HEALTHY</string>
    <string name="start">Hello blank fragment</string>
    <string name="close">Hello blank fragment</string>
    <string name="level">Level</string>
    <string name="droplet">Droplet</string>
    <string name="input">Set your information to calculate and customize your daily drink plan</string>
    <string name="apply">APPLY</string>
    <string name="gender">Gender</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="male"> Male  </string>
    <string name="male_hi">पुरुष</string>
    <string name="male_gu">પુરુષ</string>
    <string name="female">  Female </string>
    <string name="wake_up">Wake up &amp;  sleep time </string>
    <string name="policynote">By clicking apply you agree with </string>
    <string name="privacypolicy">our <u>Privacy Policy</u></string>
    <string name="todo">TODO</string>
    <string name="ml">400ml</string>
    <string name="wakeuptime">8:00 AM</string>
    <string name="sleeptimepicker">10:00 PM</string>
    <string name="share_subject">www.google.com</string>
    <string name="water">Water</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="next_reminder">Next reminder</string>
    <string name="edit_history">Edit History</string>
    <string name="settings">Settings</string>
    <string name="achievement">Achievement</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="statistics">Statistics</string>
    <string name="reminder">Reminder</string>
    <string name="today_s_log">Today\'s Log</string>
    <string name="units">Water Units</string>
    <string name="current_in_use">Current in use </string>
    <string name="last_set_weight">Last set weight </string>
    <string name="weight">Your Weight</string>
    <string name="languages">App langauge</string>
    <string name="laguage_prefreneces">Laguage prefreneces</string>
    <string name="themes">App themes</string>
    <string name="set_up_your_theme">Set up your theme</string>
    <string name="add_or_remove_cups">Add or remove cups</string>
    <string name="set_daily_goal_manually">Set daily goal manually</string>
    <string name="daily_goal">Daily Target</string>
    <string name="you_can_adjust_your_daily_goal_manually">You can adjust your daily goal manually:</string>
    <string name="ml_type">ml</string>
    <string name="very_active_621_ml">Very active +621 ml</string>
    <string name="normal_0_ml">Normal +0 ml</string>
    <string name="total_sum_5621_ml">Total sum: 5621 ml</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="kg">kg</string>
    <string name="hindi">हिंदी</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="cups">Cups</string>
    <string name="gender_info">Gender is important for automatic daily goal determine:</string>
    <string name="selectlanguage">Select language</string>
    <string name="daily_goal_info">Your recommended daily goal, based on your gender </string>
    <string name="weight_info">Weight is used to calculate your daily goal ,Update your weight:</string>
    <string name="no_found">No answer has been selected</string>
    <string name="unit_info">Choose between metric and imperial unit for water logging:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate us</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share us</string>
    <string name="reminder_interval">Smart reminder interval</string>
    <string name="further_reminder">Further reminder</string>
    <string name="manage_notification">Notification Setting</string>
    <string name="Stillremindwhen">Still remind when your goal is achieved</string>
    <string name="permanent_notification">Permanent notification</string>
    <string name="sound">Sound</string>
    <string name="sound_type">Sound Type</string>
    <string name="vibration">Vibration</string>
    <string name="reminder_reliability">Reminder reliability</string>
    <string name="open">open</string>
    <string name="help_center">Help Center</string>
    <string name="minutes">minutes</string>
    <string name="every">Every</string>
    <string name="setinterval">Set your reminder interval (hh:mm)</string>
    <string name="dew_drop">Dew Drop</string>
    <string name="bubbles">Bubbles</string>
    <string name="system_default">System default</string>
    <string name="NotificationSound">Notification Sound</string>
    <string name="total_intake">Total Intake</string>
    <string name="average_volume">Average Volume</string>
    <string name="day">day</string>
    <string name="average_completion">Average Completion :</string>
    <string name="drink_frequency">Drink Frequency</string>
    <string name="percentageSymbol">%</string>
    <string name="times">times</string>
    <string name="successful_days_in_a_row">Successful days in a row</string>
    <string name="slash">/</string>
    <string name="discover">Discover</string>
    <string name="current_level">Current Level</string>
    <string name="addandremove">Add and remove cups</string>
    <string name="add_new">Add New</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="milk">Milk</string>
    <string name="fruitjuice">Fruit Juice</string>
    <string name="soda">Soda</string>
    <string name="beer">Beer</string>
    <string name="Energy">Energy Drink</string>
    <string name="lemonade">Lemonade</string>
    <string name="switchbeerage">Switch Beverage</string>
    <string name="set_as_default">Set as default</string>
    <string name="_651_ml">+651 ml</string>
    <string name="very_active">Very active</string>
    <string name="moderate_active">Moderate active</string>
    <string name="sedentary">Sedentary</string>
    <string name="_0_ml">+0 ml</string>
    <string name="_444_ml">+444 ml</string>
    <string name="_207_ml">+207 ml</string>
    <string name="Physical_activity">Physical activity</string>
    <string name="hot">Hot</string>
    <string name="warm">Warm</string>
    <string name="normal">Normal</string>
    <string name="cold">Cold</string>
    <string name="_532_ml">+532 ml</string>
    <string name="_325_ml">+325 ml</string>
    <string name="lightly_active">Lightly active</string>
    <string name="today_s_target">Today\' Target</string>
    <string name="task">Task</string>
    <string name="today_s_drinks">Today\'s drinks:</string>

    <string name="add_new_cups">Add new cups</string>
    <string name="termcondition">Term and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="home">Home</string>
    <string name="smartreminder">Smart Reminder</string>
    <string name="statesreport">States Report</string>
    <string name="medium_active">Medium active</string>
    <string name="little_active">Little active</string>
    <string name="not_active">Not active</string>
    <string name="Summer">Summer</string>
    <string name="spring">Spring</string>
    <string name="winter">Winter</string>
    <string name="yourweight">Your weight(kg)</string>
    <string name="according">according to that your daily goal is</string>
    <string name="total_sum">Total sum:</string>
    <string name="weeklyreport">Weekly report</string>
    <string name="monthlyreport">"Monthly report "</string>
    <string name="yearlyreport">"Yearly report "</string>
    <string name="lifetimereprot">Lifetime Report</string>
    <string name="reminder_off">Reminder off</string>
    <string name="intake_by_beverages">Intake by beverages</string>
    <string name="smart_drink_reminder_rank">Smart drink reminder rank :</string>
    <string name="achieveDailygoal">Achieve Daily goal</string>
    <string name="makethreecustom">Make Three Custom drinking cups</string>
    <string name="shareapp">Share app</string>
    <string name="fivesucc">Five Successfully days in row</string>
    <string name="monthlyaver">Monthly average above 2150ml</string>
    <string name="drinkfour">Drink 4 and more cups for 30 Days</string>
    <string name="timesSuccessfully">5 Times 10 Successfully days in a row</string>
    <string name="daysaverage">90 Days average above 2150ml</string>
    <string name="drinksix">Drink 6 or more cups a days for 90 days</string>
    <string name="dashboard">Dashboard</string>
    <string name="total">Total:</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="ratingHint_text">If you love using Smart Drink Reminder, kindly click here and Rate us with a 5 star Review. Your small contribution extremely helpful for us.</string>


    <dimen name="selected_text_size">40dp</dimen>
    <dimen name="text_size">25dp</dimen>
    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="design_navigation_separator_vertical_padding" tools:override="true">0dp</dimen>
    <dimen name="design_navigation_padding_top_default" tools:override="true">@dimen/_1sdp</dimen>
    <dimen name="design_navigation_padding_bottom" tools:override="true">@dimen/_1sdp</dimen>
    <dimen name="design_navigation_icon_size" tools:override="true">@dimen/_17sdp</dimen>
    <dimen name="design_navigation_icon_padding" tools:override="true">@dimen/_1sdp</dimen>
    <dimen name="activity_vertical_margin">@dimen/_1sdp</dimen>

</resources>