<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/set_as_default"
                android:textColor="@color/textColour"
                android:textSize="@dimen/_11sdp"
                android:layout_margin="@dimen/_7sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/physicalSwtich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/veryActiveCL"
            >

            <ImageView
                android:id="@+id/very_activeimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gym"
                android:layout_margin="@dimen/_7sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:tint="@color/textColourlight" />
            <TextView
                android:id="@+id/very_activetext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_active"
                android:layout_margin="@dimen/_7sdp"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/textColourlight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/very_activeimg"/>
            <TextView
                android:id="@+id/very_activetext2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/_651_ml"
                android:textColor="@color/textColourlight"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moderateActiveCL"
            >
            <ImageView
                android:id="@+id/moderateactiveimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/moderateactive"
                android:layout_margin="@dimen/_7sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:tint="@color/textColourlight" />



            <TextView
                android:id="@+id/moderate_active1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moderate_active"
                android:layout_margin="@dimen/_7sdp"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/textColourlight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/moderateactiveimg"/>
            <TextView
                android:id="@+id/moderate_active2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/_444_ml"
                android:textColor="@color/textColourlight"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lightlyActiveCL"

            >

            <ImageView
                android:id="@+id/lightlyactiveimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lightlyactive"
                android:layout_margin="@dimen/_7sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:tint="@color/textColourlight" />
            <TextView
                android:id="@+id/lightlyactive1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lightly_active"
                android:layout_margin="@dimen/_7sdp"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/textColourlight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/lightlyactiveimg"/>
            <TextView
                android:id="@+id/lightlyactive2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/_207_ml"
                android:textColor="@color/textColourlight"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sedentaryCL"

            >

            <ImageView
                android:id="@+id/sedentaryimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/human"
                android:layout_margin="@dimen/_7sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:tint="@color/textColourlight" />
            <TextView
                android:id="@+id/sedentary1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sedentary"
                android:layout_margin="@dimen/_7sdp"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/textColourlight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/sedentaryimg"/>
            <TextView
                android:id="@+id/sedentary2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/_0_ml"
                android:textColor="@color/textColourlight"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>