<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:padding="@dimen/_7sdp">

        <ImageView
            android:id="@+id/log_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/water_glass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/drink_water_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_light"
            android:text="@string/ml"
            android:textColor="@color/Black"
            android:textSize="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/delete_log"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/_13sdp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_16sdp"
            app:layout_constraintLeft_toRightOf="@+id/log_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_16sdp">
            <TextView
                android:id="@+id/logName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/water"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/log_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/drink_water_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/wakeuptime"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/delete_log"
                app:layout_constraintTop_toTopOf="parent"
               />
        </LinearLayout>



        <ImageView
            android:id="@+id/delete_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dustbin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/textColourlight" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>